# realtimetrans

./: .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.bkit/audit/: 2026-06-26.jsonl  2026-06-30.jsonl
.bkit/runtime/: cc-version.json  first-run-seen.json  otel-env.json  session-ctx-fp.json  token-ledger.ndjson
.bkit/state/: pdca-status.json  session-history.json
.claude/: settings.local.json
apps/desktop/: package.json  tailwind.config.js  tsconfig.electron.json
apps/desktop/electron/: main.ts  preload.ts
apps/desktop/renderer/: tailwind.config.js  tsconfig.json
apps/desktop/renderer/app/: layout.tsx  page.tsx
apps/desktop/renderer/app/.well-known/appspecific/com.chrome.devtools.json/: route.ts
apps/desktop/renderer/app/favicon.ico/: route.ts
apps/desktop/renderer/app/overlay/: page.tsx
apps/desktop/renderer/stores/: subtitleStore.ts
apps/desktop/renderer/styles/: globals.css
deploy/nginx/: app.rtvoice.com.conf  rtvoice.com.conf
deploy/systemd/: rtvoice-api.service  rtvoice-web.service
docs/: architecture.md  rtvoice-domain.md
services/api/: .env.example  package.json  pyproject.toml
services/api/app/: main.py
services/api/app/pipeline/: realtime_pipeline.py  system_audio.py
services/api/app/providers/: asr_text.py  base.py  gemini_provider.py  local_provider.py  mock.py  openai_provider.py  openai_realtime_provider.py  registry.py
services/api/tests/: test_websocket.py
