[project]
name = "livesub-api"
version = "1.0.0"
description = "FastAPI backend for LiveSub AI real-time translation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "websockets>=12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "numpy>=1.26.0",
    "faster-whisper>=1.1.1",
    "torch>=2.3.0",
    "transformers>=4.44.0",
    "sentencepiece>=0.2.0",
    "soundcard>=0.4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

